--- a/src/Components/CardDescription/CardDescription.module.scss
+++ b/src/Components/CardDescription/CardDescription.module.scss
@@ -1,13 +1,58 @@
-.card_description {
-    width: 500px;
-    color: black;
-    position: relative;
-    margin-top: -10px;
-    z-index: 2;    
+// .card_description {
+//     width: 500px;
+//     color: black;
+//     position: relative;
+//     margin-top: -10px;
+//     z-index: 2;    
     
-    .card__descriptionContainer{ 
-    display: flex;
-    justify-content: space-between;
-    }
-  }
+//     .card__descriptionContainer{ 
+//     display: flex;
+//     justify-content: space-between;
+//     }
+//   }
   
+.card_description {
+  width: 350px;
+  padding: 16px 0;
+  margin: 0 5px;
+
+  .card__descriptionContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .info {
+    color: #828282;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+  }
+
+  .ratingWrapper {
+    display: flex;
+    align-items: center;
+    color: #4f4f4f;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+  }
+
+  .rating {
+    margin-left: 3px;
+  }
+
+  .title {
+    color: #333333;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    white-space: nowrap;
+    padding-top: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
