--- a/src/Components/CardImage/CardImage.module.scss
+++ b/src/Components/CardImage/CardImage.module.scss
@@ -1,8 +1,26 @@
-.img {
-    width: 500px;
-    height: 350px;
-    object-fit: cover;
-    border-radius: 25px;
-    position: relative;
-    
+// .img {
+//     width: 500px;
+//     height: 350px;
+//     object-fit: cover;
+//     border-radius: 25px;
+//     position: relative;
+// }
+
+.imageWrapper {
+  object-fit: contain;
+  min-width: 350px;
+  height: 269px;
+  padding-bottom: 15px;
+
+  .img {
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
   }
+}
+
+@media screen and (max-width: 360px) {
+  .imageWrapper {
+    min-width: inherit;
+  }
+}
