--- a/src/Components/FlatsCard/FlatCard.module.scss
+++ b/src/Components/FlatsCard/FlatCard.module.scss
@@ -1,6 +1,18 @@
+// .card {
+//     border-radius: 20px;
+//     overflow: hidden;
+//     display: inline-block;
+//     margin: 20px;
+//   }
+
 .card {
-    border-radius: 20px;
-    overflow: hidden;
-    display: inline-block;
-    margin: 20px;
+  width: 350px;
+  padding: 16px 0;
+  margin: 0 5px;
+}
+
+@media screen and (max-width: 360px) {
+  .card {
+    width: 98%;
   }
+}
