fix: card responsive and style

--- a/src/Components/CardImage/CardImage.module.scss
+++ b/src/Components/CardImage/CardImage.module.scss
@@ -9,7 +9,8 @@
 .imageWrapper {
   object-fit: contain;
   min-width: 350px;
-  height: 269px;
+  // height: 269px;
+  height: 30vh;
   padding-bottom: 15px;
 
   .img {
