--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,7 +4,10 @@ h1 {
 
 .cardContainer {
     display: flex;
-    justify-content: space-between;
-    margin: auto 4.8%;
     flex-wrap: wrap;
+
+    column-gap: 20px;
+    row-gap: 10px;
+    justify-content: space-evenly;
+    margin: auto 4.8%;
 }
