--- a/src/Components/CardDescription/CardDescription.module.scss
+++ b/src/Components/CardDescription/CardDescription.module.scss
@@ -12,7 +12,7 @@
 //   }
   
 .card_description {
-  width: 350px;
+  // width: 49vh;
   padding: 16px 0;
   margin: 0 5px;
 
@@ -27,12 +27,12 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
+    // font-size: 14px;
   }
 
   .ratingWrapper {
-    display: flex;
-    align-items: center;
+    // display: flex;
+    // align-items: center;
     color: #4f4f4f;
     font-family: Montserrat;
     font-style: normal;
