--- a/src/Components/FlatsCard/FlatCard.module.scss
+++ b/src/Components/FlatsCard/FlatCard.module.scss
@@ -6,10 +6,15 @@
 //   }
 
 .card {
-  width: 350px;
+  // width: 350px;
+  width: 45vh;
+  // height: 30vh;
   padding: 16px 0;
   margin: 0 5px;
+  
 }
+
+
 
 @media screen and (max-width: 360px) {
   .card {
