--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,6 +8,6 @@ h1 {
 
     column-gap: 20px;
     row-gap: 10px;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
     margin: auto 4.8%;
 }
