--- a/src/Components/Searchbar/Searchbar.module.scss
+++ b/src/Components/Searchbar/Searchbar.module.scss
@@ -13,7 +13,7 @@
     position: fixed;
     top: 0;
     box-shadow:0 0 0 10000px rgba(0, 0, 0, 0.4);
-
+    z-index: -1;
     .formSearch{
         display: flex;
         flex-direction: column;
