--- a/src/Components/Searchbar/Searchbar.module.scss
+++ b/src/Components/Searchbar/Searchbar.module.scss
@@ -4,6 +4,8 @@
   border-width: 2px;
   background-color: white;
   width: 100%;
+  height: auto;
+  max-height: 40%;
   // border-radius:9999px;
   padding: 2px;
   padding-top: 5px;
@@ -47,4 +49,11 @@
     //    position: relative;
     // }
   }
-}
+  .formguest {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+
+  
