--- a/src/Components/Searchbar/Searchbar.module.scss
+++ b/src/Components/Searchbar/Searchbar.module.scss
@@ -26,7 +26,6 @@
       padding: 30px;
 
       .searchbarInput {
-        padding-left: 20px;
         position: relative;
         border: transparent;
       }
@@ -53,7 +52,40 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+
+      .gueInp{
+        display: flex;
+        flex-direction: column;
+        border: 1px solid black;
+        border-radius: 10px;
+        // margin: 20px 50px;
+        padding: 30px;
+
+        .guestBarInput{
+          position: relative;
+          border: transparent;
+        }
+      }
+    }
+    .inpFormAdCh{
+      width: 1rem;
+      text-align: center;
+      border: none;
+      font-weight: bold;
+    }
+    
+    .plusMin
+    {
+      background:#ffffff;
+      border: 1px solid rgba(112, 112, 112, 0.6);
+      border-radius: 5px;
+    }
+    
+    
+    .aduChi {
+      display: flex;
+      flex-direction: column;
     }
   }
-
+  
   
