--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,9 +5,9 @@ h1 {
 .cardContainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 
-    column-gap: 2.5rem;
+    column-gap: 12rem;
     row-gap: 10px;
-    // margin: auto 4.8%;
+    margin: auto 4.8%;
 }
