--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,9 +1,9 @@
 .footerModal {
     position: fixed;
-    width: 40vw;
-    height: 50vh;
+    width: 52vw;
+    height: 75vh;
     background-color:white;
-    top: 25vh;
+    top: 10vh;
     left: 30vw;
     z-index: 1;
     border-radius:20px;
@@ -22,22 +22,23 @@
     display: flex;
     justify-content:center;
     gap: 2rem;
-
+    margin: 0 2rem;
+    width: 50vw;
     
 .membro{
     text-align: center;
-    width: 150px;
-    height: 340px;
+    width: 18vw;
+    height: 15vh;
     margin-top: 3.5rem;
     transition: all 0.35s;
     
     .nomeMembro{
-        font-size: 15.5px;
+        font-size:medium;
         font-weight: bold;
     }
 
     .containerDescMod{
-            font-size: 14px;
+            font-size:small;
             overflow: hidden;
             max-height: 0px;
             .containerLinks{
@@ -61,9 +62,9 @@
         transform: scale(1.5)
  }
  &:hover{
-    height: 280px;
+    height: 40vh;
     background-color: rgb(235, 232, 232);
-    transform:translateY(-40px) ;
+    transform:translateY(-5vh) ;
     
 
      .membroImg{
@@ -80,10 +81,14 @@
  }
  .imgCloseMod{
     width: 100%;
-    text-align: center;
+    
+    position:fixed;
+    // top: 10vh;
+    left: 51.5vw;
+    bottom: 15vh;
 .imgModal {
-width: 200px;
-height: 200px;
+width: 150px;
+height: 150px;
 cursor: pointer;
 
 }
@@ -104,3 +109,65 @@ cursor: pointer;
 
 }
 
+@media screen and (max-width: 460px) {
+    .footerModal {
+        width:90vw;
+        top: 8vh;
+        left:5vw;
+        .membri{
+           flex-direction: column;
+           gap: 0 ;
+           .membro{
+               display: flex;
+            flex-direction: row;
+            gap: 5vw;
+            height:7vh;
+            width:20vw;
+            text-align:justify;
+            .containerDescMod{
+                display: flex;
+                flex-direction: row;
+                font-size:small;
+                overflow: hidden;
+                max-width: 0px;
+                gap: 1vw;
+                .containerLinks{
+                    display: flex;
+                    flex-direction:column;
+                    justify-content: space-around;
+                    margin-top: 0;
+                
+                    .imgLinkedin{
+                        width: 8vw;
+                    }
+                     .imgGitHub{
+                        width: 8vw;
+                        transform:translateY(-3px)
+                    }
+                    
+                }
+            }
+            .membroImg{
+               width: 13vw;
+               
+                
+            }
+            &:hover{
+                height: 8vh;
+                width: 85vw;;
+                transform:translateX(-5vw) ;
+                
+  
+                // display: flex;
+                // justify-content:space-around;
+                // .membroImg{
+                //     // line-height: 1vh;
+                //    }
+                
+            }
+            }
+        }
+
+    }
+   
+  }
