--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,6 @@
+.app{
+    width: 100%;
+    }
 h1 {
     margin-left: 20px;
 }
@@ -10,4 +13,10 @@ h1 {
     column-gap: 12rem;
     row-gap: 10px;
     margin: auto 4.8%;
+}
+
+@media screen and (max-width: 460px) {
+    .cardContainer{
+        justify-content: flex-start;
+    }
 }
