--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -16,7 +16,7 @@
         text-align: center;
     }
 
-  
+
 }
 .membri{
     display: flex;
@@ -24,14 +24,13 @@
     gap: 2rem;
     margin: 0 2rem;
     width: 50vw;
-    
 .membro{
     text-align: center;
     width: 18vw;
     height: 15vh;
     margin-top: 3.5rem;
     transition: all 0.35s;
-    
+
     .nomeMembro{
         font-size:medium;
         font-weight: bold;
@@ -52,10 +51,10 @@
                     width: 3.3rem;
                     transform:translateY(-3px)
                 }
-                
+
             }
         }
-    
+
  .membroImg{
     width: 70px;
         border-radius: 50%;
@@ -65,7 +64,6 @@
     height: 40vh;
     background-color: rgb(235, 232, 232);
     transform:translateY(-5vh) ;
-    
 
      .membroImg{
      transform: scale(1);
@@ -76,12 +74,11 @@
     max-height: none;
     }
         }
-        
+
     }
  }
  .imgCloseMod{
     width: 100%;
-    
     position:fixed;
     // top: 10vh;
     left: 51.5vw;
@@ -114,9 +111,13 @@ cursor: pointer;
         width:90vw;
         top: 8vh;
         left:5vw;
+        .titleMod{
+            margin: -2vh 0 -5vh;
+        }
         .membri{
            flex-direction: column;
            gap: 0 ;
+
            .membro{
                display: flex;
             flex-direction: row;
@@ -124,6 +125,11 @@ cursor: pointer;
             height:7vh;
             width:20vw;
             text-align:justify;
+            margin-top:3vh;
+            padding-top:2vh;
+
+
+
             .containerDescMod{
                 display: flex;
                 flex-direction: row;
@@ -136,7 +142,6 @@ cursor: pointer;
                     flex-direction:column;
                     justify-content: space-around;
                     margin-top: 0;
-                
                     .imgLinkedin{
                         width: 8vw;
                     }
@@ -144,30 +149,33 @@ cursor: pointer;
                         width: 8vw;
                         transform:translateY(-3px)
                     }
-                    
                 }
             }
             .membroImg{
                width: 13vw;
-               
-                
+
+
             }
             &:hover{
                 height: 8vh;
                 width: 85vw;;
                 transform:translateX(-5vw) ;
-                
-  
-                // display: flex;
-                // justify-content:space-around;
-                // .membroImg{
-                //     // line-height: 1vh;
-                //    }
-                
             }
             }
         }
+        .imgCloseMod{
+            width: 100%;
+            position:fixed;
+            left: 60vw;
+            bottom: 22vh;
+        .imgModal {
+        width: 150px;
+        height: 150px;
+        cursor: pointer;
+        
+        }
+        }
 
     }
-   
+
   }
