--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -161,7 +161,8 @@ cursor: pointer;
                 }
             }
             .membroImg{
-               width: 11vw;
+               width: 10vw;
+               height: 10vw;
 
 
             }
